--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
       - pip install --upgrade awscli
   pre_build:
     commands:
-      - $(aws ecr get-login --no-include-email --region us-east-2)
+      - $(aws ecr get-login --region us-east-2)
   build:
     commands:
       - sbt test
