--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,21 +5,9 @@ env:
     CONF: "prod.conf"
 
 phases:
-  install:
-    commands:
-      - echo "$(lsb_release -cs)"
-      - apt-get update -y
-      - apt-get install -y apt-transport-https ca-certificates software-properties-common
-      - add-apt-repository -y ppa:openjdk-r/ppa
-      - sudo apt-get update -y
-      - apt-get install -y openjdk-8-jdk
-      - echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
-      - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
-      - apt-get update -y
-      - apt-get install -y sbt
-      - pip install --upgrade awscli
   pre_build:
     commands:
+      - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --region us-east-2)
   build:
     commands:
